--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body {
 } */
 
 .DoYouKnow{
-    background: url(C:\Users\DELL\Desktop\project\inbrieff\src\assets\background.png) no-repeat center;
+    background: url(../src/assets/background.png) no-repeat center;
     min-height: 100vh;
     background-size: cover;
     object-fit: cover;
